--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         <button class="button Home" id="home-button">Home</button>
       </div>
     </div>
-      <iframe src="main.html" title="Mathematics Homework" style="position:fixed; width:100%; height:100%; border:none;"></iframe>></iframe>
+      <iframe src="/main.html" title="Mathematics Homework" style="position:fixed; width:100%; height:100%; border:none;"></iframe>></iframe>
     <script>
       const homeButton = document.getElementById("home-button");
       homeButton.addEventListener("click", function() {
