--- a/public/404.html
+++ b/public/404.html
@@ -79,7 +79,7 @@
             }
         }
     </style>
-      <script src="assets/js/panic.js"></script>
+      <script src="/assets/js/panic.js"></script>
 </head>
 <body>
     <div class="container">
