--- a/public/chat.html
+++ b/public/chat.html
@@ -24,11 +24,11 @@
       <br>
       <a href="/../" class="logo">Interstellar</a>
       <div class="header2-right">
-        <a href="web">Proxy</a>
-        <a href="play">Games</a>
-        <a href="apps">Apps</a>
-        <a href="chat">Chatroom</a>
-        <a href="settings">Settings</a>
+        <a href="/web">Proxy</a>
+        <a href="/play">Games</a>
+        <a href="/apps">Apps</a>
+        <a href="/chat">Chatroom</a>
+        <a href="/settings">Settings</a>
       </div>
     </div>
     <br>
