--- a/public/main.html
+++ b/public/main.html
@@ -20,11 +20,11 @@
       <br>
       <a href="/../" class="logo">Interstellar</a>
       <div class="header2-right">
-        <a href="/web">Proxy</a>
-        <a href="/play">Games</a>
-        <a href="/apps">Apps</a>
-        <a href="/chat">Chatroom</a>
-        <a href="/settings">Settings</a>
+        <a href="public/web">Proxy</a>
+        <a href="public/play">Games</a>
+        <a href="public/apps">Apps</a>
+        <a href="public/chat">Chatroom</a>
+        <a href="public/settings">Settings</a>
       </div>
     </div>
     <div id="cookieNotice" class="light display-right" style="display: block;">
