--- a/public/play.html
+++ b/public/play.html
@@ -35,11 +35,11 @@
       <br />
       <a class="logo" href="/../"> Interstellar </a>
       <div class="header2-right">
-        <a href="web"> Proxy </a>
-        <a href="play"> Games </a>
-        <a href="apps"> Apps </a>
-        <a href="chat"> Chatroom </a>
-        <a href="settings"> Settings </a>
+        <a href="web.html"> Proxy </a>
+        <a href="play.html"> Games </a>
+        <a href="apps.html"> Apps </a>
+        <a href="chat.html"> Chatroom </a>
+        <a href="settings.html"> Settings </a>
       </div>
     </div>
     <br>
