--- a/static/index.html
+++ b/static/index.html
@@ -31,12 +31,11 @@
   <body>
     <div class="header2">
       <br>
-      <a href="/../" class="logo">Interstellar</a>
+      <a href="/../" class="logo">Mathier</a>
       <div class="header2-right">
-        <a href="web">Proxy</a>
         <a href="play">Games</a>
         <a href="apps">Apps</a>
-        <a href="chat">Chatroom</a>
+        <a href="web">UnblockedWeb</a>
         <a href="settings">Settings</a>
       </div>
     </div>
@@ -64,14 +63,12 @@
         <div class="container">
           <div class="mainhead">
             <div class="title">
-              <h1>Interstellar</h1>
+              <h1>Mathier</h1>
             </div>
-            <button class="discord-btn2">Join our Discord</button>
+          
           </div>
           <br>
           <br>
-          <p class="text-center">
-            <iframe src="https://hub.alienhub.xyz/show?utm_medium=interstellar" title="Alienhub Advertisement" scrolling="no" width="450" height="150" frameborder="0"></iframe>
           </p>
           <br>
           <br>
