--- a/static/apps.html
+++ b/static/apps.html
@@ -35,12 +35,12 @@
   <body>
     <div class="header2">
       <br />
-      <a href="/../" class="logo">Mathier</a>
+      <h1>Mathier</h1>
       <div class="header2-right">
-        <a href="play">Games</a>
-        <a href="apps">Apps</a>
-        <a href="web">UnblockedWeb</a>
-        <a href="settings">Settings</a>
+        <a href="index.html">Games</a>
+        <a href="apps.html">Apps</a>
+        <a href="web.html">UnblockedWeb</a>
+        <a href="settings.html">Settings</a>
       </div>
     </div>
     <br />
