--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
   <body>
     <div class="header2">
       <br />
-      <h1>Mathier</h1>
+      <a href="/index.html">Mathier</h1>
       <div class="header2-right">
         <a href="index.html">Games</a>
         <a href="apps.html">Apps</a>
