--- a/static/web.html
+++ b/static/web.html
@@ -25,12 +25,12 @@
    <body>
     <div class="header2">
       <br>
-      <h1>Mathier</h1>
-      <div class="header2-right">
-        <a href="index.html">Games</a>
-        <a href="apps.html">Apps</a>
-        <a href="web.html">UnblockedWeb</a>
-        <a href="settings.html">Settings</a>
+      <a href="/index.html">Mathier</h1>
+        <div class="header2-right">
+          <a href="index.html">Games</a>
+          <a href="apps.html">Apps</a>
+          <a href="web.html">UnblockedWeb</a>
+          <a href="settings.html">Settings</a>
       </div>
     </div>
 <body class="classic midnight">
