won do dree door

--- a/static/index.html
+++ b/static/index.html
@@ -1289,7 +1289,7 @@
     </div>
     <div class="row">
       <div class="span1">
-        <div class="animals" loading="lazy" style="padding-top: 5px;">
+        <div class="card animals" loading="lazy" style="padding-top: 5px;">
           <a href="games/stickman-hook/index.html">
             <img loading="lazy" src="/assets/images/icons/stickman.png" style="border-radius: 25px;" />
           </a>
