--- a/static/index.html
+++ b/static/index.html
@@ -1293,7 +1293,7 @@
           <a href="games/stickman-hook/index.html">
             <img loading="lazy" src="/assets/images/icons/stickman.png" style="border-radius: 25px;" />
           </a>
-          <p3> Stickman Hook </p3>
+          <p3> Stickman Hook ? </p3>
         </div>
       </div>
     </div>
