--- a/static/index.html
+++ b/static/index.html
@@ -1290,10 +1290,10 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a href="games/stickman-hook/index.html">
+          <a onclick="go('https://cdn.gamaddy.com/stickman-hook/')"></a>
             <img loading="lazy" src="/assets/images/icons/stickman.png" style="border-radius: 25px;" />
           </a>
-          <p3> Stickman Hook ? </p3>
+          <p3> Stickman Hook </p3>
         </div>
       </div>
     </div>
