--- a/static/index.html
+++ b/static/index.html
@@ -1290,7 +1290,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://cdn.gamaddy.com/stickman-hook/')"></a>
+          <a onclick="go('https://cdn.gamaddy.com/stickman-hook/')">
             <img loading="lazy" src="/assets/images/icons/stickman.png" style="border-radius: 25px;" />
           </a>
           <p3> Stickman Hook </p3>
